--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Coda:400,800|Lato|Zilla+Slab+Highlight');
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
+  width: 100vw;
+  height: 100vh;
   background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.navigation {
+  width: 100%;
+  height: 95px;
+  background-color: rgba(29,29,29, 1);
 }
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
