--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Lato', sans-serif;  
+}
 .App {
   width: 100vw;
   height: 100vh;
@@ -19,3 +23,25 @@
 }
 
 
+.content-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  height: 40px;
+  margin-top: auto;
+  color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer #credentials {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.footer #credentials:hover {
+  color: #7c7c7c;
+}
